[package]
name = "rustbusters-support"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5"
log = "0.4.22"
rand = "0.9.0-alpha.2"
dotenv = "0.15.0"